{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 508,
  "lineage": "9a66a7b6-80da-3f7e-15d0-28ac28ac4338",
  "resources": [
    {
      "module": "module.ansible",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d767e966f3458eb5",
            "arn": "arn:aws:ec2:eu-west-3:074677625520:instance/i-089f1dab4d2748cd1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089f1dab4d2748cd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ET2PACAAD",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfaa7408f293ad74",
            "private_dns": "ip-10-0-1-32.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.32",
            "public_ip": "13.37.227.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6e2851b124a8832",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0775ed0dfd56282f1",
            "tags": {
              "name": "ET2PACAAD-ansible-server"
            },
            "tags_all": {
              "name": "ET2PACAAD-ansible-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ebaca3de6211e46"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.ansible.aws_iam_access_key.user-access-key",
            "module.ansible.aws_iam_user.user",
            "module.nexus.aws_instance.Nexus-server",
            "module.vpc.aws_key_pair.keypair",
            "module.vpc.aws_security_group.bastion_Ansible_sg",
            "module.vpc.aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "module": "module.bastion-host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d767e966f3458eb5",
            "arn": "arn:aws:ec2:eu-west-3:074677625520:instance/i-0f227e21b9e0825ec",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f227e21b9e0825ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ET2PACAAD",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05560bb5cc9cb4c0f",
            "private_dns": "ip-10-0-1-81.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.81",
            "public_ip": "13.38.54.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05163d30fee37288e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0775ed0dfd56282f1",
            "tags": {
              "Name": "ET2PACAAD-bastion-host"
            },
            "tags_all": {
              "Name": "ET2PACAAD-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ebaca3de6211e46"
            ]
          },
          "dependencies": [
            "module.vpc.aws_key_pair.keypair",
            "module.vpc.aws_security_group.bastion_Ansible_sg",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/ET2PACAAD-jenkins-elb",
            "availability_zones": [
              "eu-west-3a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "ET2PACAAD-jenkins-elb-745520951.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "ET2PACAAD-jenkins-elb",
            "idle_timeout": 400,
            "instances": [
              "i-09b3d84759e90c3bb"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "ET2PACAAD-jenkins-elb",
            "security_groups": [
              "sg-019b86fd02acdde4b"
            ],
            "source_security_group": "074677625520/jenkins",
            "source_security_group_id": "sg-019b86fd02acdde4b",
            "subnets": [
              "subnet-0775ed0dfd56282f1"
            ],
            "tags": {
              "Name": "ET2PACAAD-jenkins-elb"
            },
            "tags_all": {
              "Name": "ET2PACAAD-jenkins-elb"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_server",
            "module.nexus.aws_instance.Nexus-server",
            "module.vpc.aws_key_pair.keypair",
            "module.vpc.aws_security_group.jenkins_sg",
            "module.vpc.aws_security_group.nexus_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d767e966f3458eb5",
            "arn": "arn:aws:ec2:eu-west-3:074677625520:instance/i-09b3d84759e90c3bb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b3d84759e90c3bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ET2PACAAD",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc0f4c5cac19280a",
            "private_dns": "ip-10-0-3-141.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.141",
            "public_ip": "15.236.134.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04eb1c685c854bb93",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac6955f1170d92c1",
            "tags": {
              "Name": "ET2PACAAD-jenkins"
            },
            "tags_all": {
              "Name": "ET2PACAAD-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019b86fd02acdde4b"
            ]
          },
          "dependencies": [
            "module.nexus.aws_instance.Nexus-server",
            "module.vpc.aws_key_pair.keypair",
            "module.vpc.aws_security_group.jenkins_sg",
            "module.vpc.aws_security_group.nexus_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nexus",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d767e966f3458eb5",
            "arn": "arn:aws:ec2:eu-west-3:074677625520:instance/i-0baab99aa693ee95e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0baab99aa693ee95e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ET2PACAAD",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08bf565e869451544",
            "private_dns": "ip-10-0-2-62.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.62",
            "public_ip": "35.180.130.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05cfd17b7330022f8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044d1cc6272fcc83a",
            "tags": {
              "name": "ET2PACAAD-nexus"
            },
            "tags_all": {
              "name": "ET2PACAAD-nexus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e04e1cca9e393c0"
            ]
          },
          "dependencies": [
            "module.vpc.aws_key_pair.keypair",
            "module.vpc.aws_security_group.nexus_sg",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-high-availability",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/app/alb-prod/3d66dba9e217a534",
            "arn_suffix": "app/alb-prod/3d66dba9e217a534",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-prod-1169417472.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/app/alb-prod/3d66dba9e217a534",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-082f648d823f72334"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0465941e5705af503"
              },
              {
                "subnet_id": "subnet-0ac6955f1170d92c1"
              }
            ],
            "subnets": [
              "subnet-0465941e5705af503",
              "subnet-0ac6955f1170d92c1"
            ],
            "tags": {
              "Name": "ET2PACAAD-prod-alb"
            },
            "tags_all": {
              "Name": "ET2PACAAD-prod-alb"
            },
            "vpc_id": "vpc-030ce414d3812eca2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.docker_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-high-availability",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:listener/app/alb-prod/3d66dba9e217a534/737340d134068d6d",
            "certificate_arn": "arn:aws:acm:eu-west-3:074677625520:certificate/588558a3-7a91-4f88-9d75-188ab6d9b8bc",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:targetgroup/prod-tg/800a9aec1b0a0b88",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:listener/app/alb-prod/3d66dba9e217a534/737340d134068d6d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/app/alb-prod/3d66dba9e217a534",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-high-availability.aws_lb.alb-prod",
            "module.prod-high-availability.aws_lb_target_group.target-group",
            "module.ssl.aws_acm_certificate.acm_certificate",
            "module.vpc.aws_security_group.docker_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-high-availability",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:listener/app/alb-prod/3d66dba9e217a534/b866e1f2e81358d5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:targetgroup/prod-tg/800a9aec1b0a0b88",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:listener/app/alb-prod/3d66dba9e217a534/b866e1f2e81358d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/app/alb-prod/3d66dba9e217a534",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-high-availability.aws_lb.alb-prod",
            "module.prod-high-availability.aws_lb_target_group.target-group",
            "module.vpc.aws_security_group.docker_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-high-availability",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:targetgroup/prod-tg/800a9aec1b0a0b88",
            "arn_suffix": "targetgroup/prod-tg/800a9aec1b0a0b88",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:targetgroup/prod-tg/800a9aec1b0a0b88",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarqube",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b5a865c3579bbc4",
            "arn": "arn:aws:ec2:eu-west-3:074677625520:instance/i-0493048fd550f66c1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0493048fd550f66c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ET2PACAAD",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016a101d714376684",
            "private_dns": "ip-10-0-1-103.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_ip": "15.237.180.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071b4a07ed029c851",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0775ed0dfd56282f1",
            "tags": {
              "Name": "ET2PACAAD-sonarqube-server"
            },
            "tags_all": {
              "Name": "ET2PACAAD-sonarqube-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09caa2b5b3d4363a4"
            ]
          },
          "dependencies": [
            "module.vpc.aws_key_pair.keypair",
            "module.vpc.aws_security_group.sonarqube_sg",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage-high-availability",
      "mode": "managed",
      "type": "aws_lb",
      "name": "stage-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/app/stage-alb/a585d84280ec1720",
            "arn_suffix": "app/stage-alb/a585d84280ec1720",
            "desync_mitigation_mode": "defensive",
            "dns_name": "stage-alb-743313371.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/app/stage-alb/a585d84280ec1720",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stage-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-082f648d823f72334"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0465941e5705af503"
              },
              {
                "subnet_id": "subnet-0ac6955f1170d92c1"
              }
            ],
            "subnets": [
              "subnet-0465941e5705af503",
              "subnet-0ac6955f1170d92c1"
            ],
            "tags": {
              "Name": "ET2PACAAD-stage-alb"
            },
            "tags_all": {
              "Name": "ET2PACAAD-stage-alb"
            },
            "vpc_id": "vpc-030ce414d3812eca2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.docker_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage-high-availability",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https-stage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:listener/app/stage-alb/a585d84280ec1720/179bd8b1ef04cc2b",
            "certificate_arn": "arn:aws:acm:eu-west-3:074677625520:certificate/588558a3-7a91-4f88-9d75-188ab6d9b8bc",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:targetgroup/stage-tg/c0473b6121857329",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:listener/app/stage-alb/a585d84280ec1720/179bd8b1ef04cc2b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/app/stage-alb/a585d84280ec1720",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssl.aws_acm_certificate.acm_certificate",
            "module.stage-high-availability.aws_lb.stage-alb",
            "module.stage-high-availability.aws_lb_target_group.target-group",
            "module.vpc.aws_security_group.docker_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage-high-availability",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "stage-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:listener/app/stage-alb/a585d84280ec1720/4aaee30fec6626bd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:targetgroup/stage-tg/c0473b6121857329",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:listener/app/stage-alb/a585d84280ec1720/4aaee30fec6626bd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:loadbalancer/app/stage-alb/a585d84280ec1720",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stage-high-availability.aws_lb.stage-alb",
            "module.stage-high-availability.aws_lb_target_group.target-group",
            "module.vpc.aws_security_group.docker_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage-high-availability",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:targetgroup/stage-tg/c0473b6121857329",
            "arn_suffix": "targetgroup/stage-tg/c0473b6121857329",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:074677625520:targetgroup/stage-tg/c0473b6121857329",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "stage-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b22c1a6c0fdbed4",
            "association_id": "eipassoc-02d6f46c5e4948e80",
            "domain": "vpc",
            "id": "eipalloc-02b22c1a6c0fdbed4",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-083c61893e26f4356",
            "private_dns": "ip-10-0-1-194.eu-west-3.compute.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-13-39-176-8.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.176.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:internet-gateway/igw-015e0442a366370ec",
            "id": "igw-015e0442a366370ec",
            "owner_id": "074677625520",
            "tags": {
              "Name": "ET2PACAAD-igw"
            },
            "tags_all": {
              "Name": "ET2PACAAD-igw"
            },
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b22c1a6c0fdbed4",
            "association_id": "eipassoc-02d6f46c5e4948e80",
            "connectivity_type": "public",
            "id": "nat-0fe54d9827041aa97",
            "network_interface_id": "eni-083c61893e26f4356",
            "private_ip": "10.0.1.194",
            "public_ip": "13.39.176.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0775ed0dfd56282f1",
            "tags": {
              "Name": "ET2PACAAD-ngw"
            },
            "tags_all": {
              "Name": "ET2PACAAD-ngw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:route-table/rtb-0b764c183905d8525",
            "id": "rtb-0b764c183905d8525",
            "owner_id": "074677625520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe54d9827041aa97",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ET2PACAAD-private_rt"
            },
            "tags_all": {
              "Name": "ET2PACAAD-private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:route-table/rtb-05d4e7a0e911c4d15",
            "id": "rtb-05d4e7a0e911c4d15",
            "owner_id": "074677625520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015e0442a366370ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ET2PACAAD-public_rt"
            },
            "tags_all": {
              "Name": "ET2PACAAD-public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_SN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025ff27762ec3edf8",
            "route_table_id": "rtb-0b764c183905d8525",
            "subnet_id": "subnet-0ac6955f1170d92c1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_SN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc0c144c3a666561",
            "route_table_id": "rtb-0b764c183905d8525",
            "subnet_id": "subnet-0465941e5705af503"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_SN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2661b79df0ed8a5",
            "route_table_id": "rtb-05d4e7a0e911c4d15",
            "subnet_id": "subnet-0775ed0dfd56282f1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_SN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064d6f37ccced3e6a",
            "route_table_id": "rtb-05d4e7a0e911c4d15",
            "subnet_id": "subnet-044d1cc6272fcc83a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_Ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:security-group/sg-03ebaca3de6211e46",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ebaca3de6211e46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_Ansible",
            "name_prefix": "",
            "owner_id": "074677625520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ET2PACAAD-bastion_ansible-sg"
            },
            "tags_all": {
              "Name": "ET2PACAAD-bastion_ansible-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:security-group/sg-082f648d823f72334",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082f648d823f72334",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port_proxy",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Docker",
            "name_prefix": "",
            "owner_id": "074677625520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ET2PACAAD-docker-sg"
            },
            "tags_all": {
              "Name": "ET2PACAAD-docker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:security-group/sg-019b86fd02acdde4b",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019b86fd02acdde4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port_proxy",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "074677625520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ET2PACAAD-jenkins-sg"
            },
            "tags_all": {
              "Name": "ET2PACAAD-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:security-group/sg-02860e5d5ada48ae4",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02860e5d5ada48ae4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Database access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql",
            "name_prefix": "",
            "owner_id": "074677625520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ET2PACAAD-mysql"
            },
            "tags_all": {
              "Name": "ET2PACAAD-mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:security-group/sg-04e04e1cca9e393c0",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e04e1cca9e393c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nexus access",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nexus access",
                "from_port": 8085,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8085
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nexus",
            "name_prefix": "",
            "owner_id": "074677625520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ET2PACAAD-nexus-sg"
            },
            "tags_all": {
              "Name": "ET2PACAAD-nexus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:security-group/sg-09caa2b5b3d4363a4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09caa2b5b3d4363a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Sonarqube access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube",
            "name_prefix": "",
            "owner_id": "074677625520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ET2PACAAD-sonarqube-sg"
            },
            "tags_all": {
              "Name": "ET2PACAAD-sonarqube-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:subnet/subnet-0ac6955f1170d92c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac6955f1170d92c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074677625520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ET2PACAAD-private-subnet-1"
            },
            "tags_all": {
              "Name": "ET2PACAAD-private-subnet-1"
            },
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:subnet/subnet-0465941e5705af503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0465941e5705af503",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074677625520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ET2PACAAD-private-subnet-2"
            },
            "tags_all": {
              "Name": "ET2PACAAD-private-subnet-2"
            },
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:subnet/subnet-0775ed0dfd56282f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0775ed0dfd56282f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074677625520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ET2PACAAD-public-subnet-1"
            },
            "tags_all": {
              "Name": "ET2PACAAD-public-subnet-1"
            },
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:subnet/subnet-044d1cc6272fcc83a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044d1cc6272fcc83a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074677625520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ET2PACAAD-public-subnet-2"
            },
            "tags_all": {
              "Name": "ET2PACAAD-public-subnet-2"
            },
            "vpc_id": "vpc-030ce414d3812eca2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:074677625520:vpc/vpc-030ce414d3812eca2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af746f6ab8f1c9f3",
            "default_route_table_id": "rtb-096526e3471e2687e",
            "default_security_group_id": "sg-0587b3d3900648626",
            "dhcp_options_id": "dopt-0bf7ccfef71472972",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-030ce414d3812eca2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096526e3471e2687e",
            "owner_id": "074677625520",
            "tags": {
              "Name": "ET2PACAAD-vpc"
            },
            "tags_all": {
              "Name": "ET2PACAAD-vpc"
            }
          }
        }
      ]
    }
  ]
}